# Transactions-and-Dining-Philosophers

./: LawProofs.txt  README.md  assignment2.cabal  stack.yaml
app/: Dining.hs  Dining2.hs  STM.hs
src/: Lawproofs.hs  Transaction.hs  Unsafeio.hs
